# pyrodigal

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: changelog.yml  package.yml  paper.yml  publish.yml  requirements.txt  test.yml
benches/connection_scoring/: bench.py  plot.py  requirements.txt  v0.6.4.json  v0.7.0.json  v0.7.2.json  v1.0.0.json  v1.0.1.json  v1.1.2-neon.json  v1.1.2.json  v2.0.0.json  v3.0.0.json  v3.3.0.json  v3.6.1.json  v3.7.0.json
benches/connection_scoring/data/: .gitignore  download.py
benches/data/: download.py
benches/run_single/: bench.py  plot.py  v2.0.0.json  v3.0.0.json  v3.3.0.json  v3.7.0.json
ci/: functions.sh  requirements.txt
ci/appveyor/: deploy.ps1
ci/travis/: deploy.sh
ci/travis/manylinux/: _before_deploy.sh  _install.sh  _script.sh  after_success.sh  before_deploy.sh  before_install.sh  install.sh  script.sh
ci/travis/osx/: after_success.sh  before_cache.sh  before_deploy.sh  install.sh  script.sh
docs/: .gitignore  benchmarks.rst  conf.py  index.rst  install.rst  outputs.rst  publications.rst  requirements.txt
docs/_static/bibtex/: citation.bib
docs/_static/json/: switcher.json
docs/api/: gene_finder.rst  genes.rst  index.rst  masks.rst  metagenomic_bin.rst  nodes.rst  orf_finder.rst  predictions.rst  pyrodigal.rst  sequence.rst  training_info.rst
docs/guide/: benchmarks.rst  cli.rst  copyright.rst  index.rst  install.rst  outputs.rst  parallel.rst  publications.rst
include/prodigal/: bitmap.h  fptr.h  gene.h  metagenomic.h
paper/: paper.bib  paper.md
pkg/aur/: PKGBUILD.in
pyrodigal/: __init__.py  __init__.pyi  __init__.pyx  __main__.py  _api.pxd  _api.pyx  _connection.h  _connection.pxd  _pyrodigal.pxd  _pyrodigal.pyi  _pyrodigal.pyx  _sequence.h  _sequence.pxd  _translation.h  _unicode.pxd  _utils.h  _utils.pxd  _version.py  cli.py  lib.pxd  lib.pyi  lib.pyx  meson.build
pyrodigal/cpu_features/: arm.pxd  x86.pxd
pyrodigal/impl/: avx.c  avx.h  avx.pxd  avx512.c  generic.c  generic.h  generic.pxd  meson.build  mmx.c  mmx.pxd  neon.c  neon.h  neon.pxd  sse.c  sse.pxd  template.h
pyrodigal/prodigal/: __init__.pxd  bitmap.pxd  dprog.h  dprog.pxd  gene.pxd  meson.build  metagenomic.pxd  node.pxd  sequence.h  sequence.pxd  training.h  training.pxd
pyrodigal/tests/: __init__.py  fasta.py  meson.build  requirements.txt  test_connection_scorer.py  test_doctest.py  test_gene.py  test_genes.py  test_mask.py  test_nodes.py  test_orf_finder.py  test_pyrodigal.py  test_sequence.py  test_training_info.py  utils.py
pyrodigal/tests/data/: SRR492066.meta.gff  __init__.py  meson.build
src/: CMakeLists.txt
src/Prodigal/: CMakeLists.txt  node.h
src/prodigal/: CMakeLists.txt  bitmap.c  dprog.c  gene.c  metagenomic.c  node.c  sequence.c  training.c
src/pyrodigal/: CMakeLists.txt  __init__.py  _connection.h  _connection.pxd  _sequence.h  _sequence.pxd  cli.py  lib.pxd  lib.pyi  lib.pyx
src/pyrodigal/cpu_features/: aarch64.pxd  x86.pxd
src/pyrodigal/impl/: CMakeLists.txt  avx.c  avx.h  avx.pxd  avx2.h  avx2.pxd  avx2.pyx  avx512.c  avx512.h  avx512.pxd  avx512.pyx  generic.c  generic.h  generic.pxd  generic.pyx  mmx.h  mmx.pxd  neon.c  neon.h  neon.pxd  neon.pyx  sse.h  sse.pxd  sse2.h  sse2.pxd  sse2.pyx  swar64.h  swar64.pxd  swar64.pyx
src/pyrodigal/prodigal/: bitmap.pxd  metagenomic.pxd  node.pxd
src/pyrodigal/tests/: fasta.py  test_connection_scorer.py  test_doctest.py  test_gene.py  test_gene_finder.py  test_genes.py  test_nodes.py  test_training_info.py
src/pyrodigal/tests/data/: SRR492066.meta.tsv  __init__.py
src/scripts/: split_training.py
src/scripts/cmake/: CythonExtension.cmake  FindAVX2.cmake  FindAVX512.cmake  FindNEON.cmake  FindSSE2.cmake  pystate_patch.h
tests/: requirements.txt  test_gene.py  test_genes.py  test_meta.py  test_pyrodigal.py
tools/: split_training.py
