[metadata]
name = pyrodigal
version = file: pyrodigal/_version.txt
author = Martin Larralde
author-email = martin.larralde@embl.de
home-page = https://github.com/althonos/pyrodigal
description = Python interface to Prodigal, an ORF finder for genomes, progenomes and metagenomes.
long-description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platform = any
keywords = bioinformatics, genome, orf, gene, prodigal
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: C
    Programming Language :: Cython
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
zip_safe = false
packages = pyrodigal
include_package_data = true
setup_requires =
    setuptools >=39.2
    cython ~=0.29.16

[options.package_data]
pyrodigal = py.typed, _version.txt, *.pyi

[coverage:run]
plugins = Cython.Coverage

[coverage:report]
include = pyrodigal/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise MemoryError()

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
