python_sources = [
    '__init__.py',
    'fasta.py',
    'requirements.txt',
    'test_connection_scorer.py',
    'test_doctest.py',
    'test_gene_finder.py',
    'test_gene.py',
    'test_genes.py',
    'test_mask.py',
    'test_nodes.py',
    'test_sequence.py',
    'test_training_info.py',
]

python.install_sources(python_sources, subdir : 'pyrodigal/tests')

subdir('data')