data_sources = [
    '__init__.py',
]

data_sources += [
    'KK037166.meta.fna.gz',
    'MIIJ01000039.fna.gz',
    'MIIJ01000039.single.fna.gz',
    'SRR492066.single.faa.gz',
    'GCF_001457455.1_NCTC11397_genomic.fna.gz',
    'KK037166.meta+mask.fna.gz',
    'MIIJ01000039.meta.faa.gz',
    'SRR492066.fna.gz',
    'SRR492066.single.fna.gz',
    'GCF_001457455.1_NCTC11397_genomic.tinf_closed.bin',
    'KK037166.single.faa.gz',
    'MIIJ01000039.meta.fna.gz',
    'SRR492066.meta.faa.gz',
    'SRR492066.training.bin.gz',
    'KK037166.single.fna.gz',
    'MIIJ01000039.meta+mask.faa.gz',
    'SRR492066.meta.fna.gz',
    'KK037166.fna.gz',
    'MIIJ01000039.meta+mask.fna.gz',
    'SRR492066.meta.gff',
    'KK037166.meta.faa.gz',
    'MIIJ01000039.faa.gz',
    'MIIJ01000039.single.faa.gz',
    'SRR492066.meta.tsv',
]

python.install_sources(
    data_sources, 
    subdir : 'pyrodigal' / 'tests' / 'data'
)