if(HAVE_SSE2)
  add_library(implsse sse.c sse.h template.h)
  target_include_directories(implsse PUBLIC $<TARGET_PROPERTY:prodigal,INCLUDE_DIRECTORIES>)
  if(SSE2_C_FLAGS AND NOT SSE2_C_FLAGS STREQUAL " ")
    target_link_options(implsse PUBLIC ${SSE2_C_FLAGS})
    target_compile_options(implsse PUBLIC ${SSE2_C_FLAGS})
  endif()
endif()

if(HAVE_AVX2)
  add_library(implavx avx.c avx.h template.h)
  target_include_directories(implavx PUBLIC  $<TARGET_PROPERTY:prodigal,INCLUDE_DIRECTORIES>)
  if(AVX2_C_FLAGS AND NOT AVX2_C_FLAGS STREQUAL " ")
    target_link_options(implavx PUBLIC ${AVX2_C_FLAGS})
    target_compile_options(implavx PUBLIC ${AVX2_C_FLAGS})
  endif()
endif()

if(HAVE_NEON)
  add_library(implneon neon.c neon.h template.h)
  target_include_directories(implneon PUBLIC  $<TARGET_PROPERTY:prodigal,INCLUDE_DIRECTORIES>)
  if(NEON_C_FLAGS AND NOT NEON_C_FLAGS STREQUAL " ")
    target_link_options(implneon PUBLIC ${NEON_C_FLAGS})
    target_compile_options(implneon PUBLIC ${NEON_C_FLAGS})
  endif()
endif()

add_library(impl generic.c generic.h template.h)
target_include_directories(impl PUBLIC $<TARGET_PROPERTY:prodigal,INCLUDE_DIRECTORIES> ${PROJECT_SOURCE_DIR}/src/pyrodigal/prodigal)
